# personal_rest_api_server

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  rust-toolchain.toml
config/: defaults.toml
crates/v1/: Cargo.toml
crates/v1/src/: config.rs  error.rs  lib.rs  main.rs
crates/v1/src/domain/: mod.rs
crates/v1/src/domain/value_obj/: birth_date.rs  mod.rs  normalized_str.rs  normalized_string.rs  user_id.rs
crates/v1/src/presentation/: mod.rs  response_helper.rs
crates/v1/src/presentation/dto/: auth.rs  common_dto.rs  mod.rs  response_helper.rs
docs/: Reference.md  startup_procedures.md
docs/adr/: 000-adr.md  001-rust.md  002-thiserror.md
migrations/: 20250616130108_create_users_table.sql  20250616131118_create_user_auths_table.sql  20250616131211_create_sessions_table.sql
scripts/: all_code.txt  combine_src.sh
