[workspace]
resolver = "3"
members = ["crates/v1"]

[workspace.dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.11"
dotenvy = "0.15.7"
nid = "3.0.0"
once_cell = "1.21.3"
prometheus = "0.14.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
sha3 = "0.10"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "uuid",
    "chrono",
    "tls-native-tls",
] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "metrics"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "json", "time"] }
unicode-general-category = "1.0.0"
unicode-normalization = "0.1.24"
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["v4"] }
zxcvbn = "3.1.0"