[package]
name = "v1"
version = "0.1.0"
edition = "2024"

# = { workspace = true }
[dependencies]
argon2 = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
nid = { workspace = true }
once_cell = { workspace = true }
prometheus = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-general-category = { workspace = true }
unicode-normalization = { workspace = true }
uuid = { workspace = true }
zxcvbn = { workspace = true }